<resources>
    <!-- Main strings. -->
    <string name="app_name">Who Wants To Be A Martian Colonist</string>
    <string name="play">Play</string>
    <string name="final_answer">Yes, this is my final answer!</string>
    <string name="next_question">Next Question</string>
    <string name="results">Show me the score!</string>

    <!-- Strings for question one -->
    <string name="question_one">What is the lightest element in the universe?</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="helium">Helium</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="oxygen">Oxygen</string>

    <!-- Strings for question two -->
    <string name="question_two">How long is a day on Mars?</string>
    <string name="day_mars">1d 0h 40m</string>
    <string name="day_venus">116d 18h 0m</string>
    <string name="day_mercury">58d 15h 30m</string>
    <string name="day_jupiter">0d 9h 56m</string>

    <!-- Strings for question three -->
    <string name="question_three">What are the two elements \nof which Mars atmosphere is made?</string>
    <string name="argon">Argon</string>
    <string name="carbon_dioxide">Carbon Dioxide</string>
    <string name="methane">Methane</string>
    <string name="ammonia">Ammonia</string>

    <!-- Strings for question four -->
    <string name="question_four">How many atmospheres of pressure \nare on Mars?</string>
    <string name="atm_mars">0.006 Atm</string>
    <string name="atm_venus">90 Atm</string>
    <string name="atm_earth">1 Atm</string>
    <string name="atm_titan">1.45 Atm</string>

    <!-- Strings for question five -->
    <string name="question_five">How strong is the gravity on Mars?</string>
    <string name="g_mars">0.376G</string>
    <string name="g_earth">1G</string>
    <string name="g_jupiter">2.4G</string>
    <string name="g_venus">0.9G</string>

    <!-- Strings for question six -->
    <string name="question_six">What is the distance between \nEarth and Mars?</string>
    <string name="au_mars">0.52 AU</string>
    <string name="au_venus">0.28 AU</string>
    <string name="au_jupiter">4.2 AU</string>
    <string name="au_saturn">9.7 AU</string>

    <!-- Strings for question seven -->
    <string name="question_seven">Which are the planets associated \nwith these greek gods?</string>
    <string name="mars_hint">Ares</string>
    <string name="venus_hint">Aphrodite</string>
    <string name="jupiter_hint">Zeus</string>
    <string name="neptune_hint">Poseidon</string>

    <!-- String for revealing the answers question seven -->
    <string name="mars_ares">mars</string>
    <string name="venus_aphrodite">venus</string>
    <string name="jupiter_zeus">jupiter</string>
    <string name="neptune_poseidon">neptune</string>

    <!-- Strings for question eight -->
    <string name="question_eight">Which of these are the two moons of Mars?</string>
    <string name="phobos">Phobos</string>
    <string name="deimos">Deimos</string>
    <string name="callisto">Callisto</string>
    <string name="titan">Titan</string>

    <!-- Strings for question nine -->
    <string name="question_nine">What is the surface temperature on Mars?</string>
    <string name="temp_mars">-153 to 20&#x2103;</string>
    <string name="temp_venus">462&#x2103;</string>
    <string name="temp_earth">-88&#x2103; to 58&#x2103;</string>
    <string name="temp_mercury">-173&#x2103; to 427&#x2103;</string>

    <!-- Strings for question ten. -->
    <string name="question_ten">How long is a year on Mars?</string>
    <string name="year_mars">687 days</string>
    <string name="year_venus">225 days</string>
    <string name="year_jupiter">4,333 days</string>
    <string name="year_mercury">88 days</string>

    <!-- Toast string. -->
    <string name="FinalAnswer">Is this your final answer?</string>
    <string name="SelectAnswer">Please select an answer!</string>
    <string name="SelectAnswers">Please select two answers!</string>
    <string name="WriteAnswers">Please write your answers!</string>
    <string name="CorrectAnswer">Great, Your answer is correct.</string>
    <string name="CorrectAnswers">Great, Your answers are correct.</string>
    <string name="IncorrectAnswer">Sorry, Your answer is incorrect.</string>
    <string name="IncorrectAnswers">Sorry, One or more answers are incorrect.</string>
    <string name="quizOver">The quiz is now over.</string>

    <string name="lowScore">I am sorry kiddo! \nYou are not ready yet. \nless then\u00A0</string>
    <string name="averageScore">Almost there! \nYou have to try a bit harder. \nonly\u00A0</string>
    <string name="highScore">Congratulations, major! \nYou are almost there. \nabout\u00A0</string>
    <string name="bestScore">You are Awesome! \nSpace travel is in your dna. \na good\u00A0</string>
    <string name="martianColonist">% chance \nof becoming \n Martian Colonist!</string>

    <!-- Toast wrong answer disclosure feedback. -->
    <string name="heliumFeedback">Helium is the 2nd lightest element.</string>
    <string name="nitrogenFeedback">Nitrogen is the 7th lightest element.</string>
    <string name="oxygenFeedback">Oxygen is the 8th lightest element.</string>

    <string name="venusFeedback">116d 18h 0m is a day on Venus.</string>
    <string name="mercuryFeedback">58d 15h 30m is a day on Mercury.</string>
    <string name="jupiterFeedback">0d 9h 56m is a day on Jupiter.</string>

    <string name="methaneFeedback">Methane is found in atmosphere of Titan.</string>
    <string name="ammoniaFeedback">Ammonia is found in atmosphere of Jupiter.</string>

    <string name="venusAtmFeedback">90 Atm of pressure are on Venus.</string>
    <string name="earthAtmFeedback">1 Atm of pressure is here on Earth.</string>
    <string name="titanAtmFeedback">1.45 Atm of pressure are on Titan.</string>

    <string name="earthGFeedback">1G strong is gravity here on Earth.</string>
    <string name="jupiterGFeedback">2.4G strong is gravity on Jupiter.</string>
    <string name="venusGFeedback">0.9G strong is gravity on on Venus.</string>

    <string name="AuFeedback">1 AU = distance from Earth to Sun.</string>
    <string name="venusAuFeedback">0.28 AU is from Earth to Venus.</string>
    <string name="jupiterAuFeedback">4.2 AU is from Earth to Jupiter.</string>
    <string name="saturnAuFeedback">9.7 AU is from Earth to Saturn.</string>

    <string name="marsGodFeedback">Ares is associated with Mars.</string>
    <string name="venusGodFeedback">Aphrodite is associate with Venus. </string>
    <string name="jupiterGodFeedback">Zeus is associated with Jupiter.</string>
    <string name="neptuneGodFeedback">Poseidon is associated with Neptune.</string>

    <string name="callistoFeedback">Callisto is a moon of Jupiter.</string>
    <string name="titanFeedback">Titan is a moon of Saturn.</string>

    <string name="venusTempFeedback">462&#x2103; is the temperature on Venus.</string>
    <string name="earthTempFeedback">-88&#x2103; to 58&#x2103; is on Earth.</string>
    <string name="mercuryTempFeedback">-173&#x2103; to 427&#x2103; is on Mercury.</string>

    <string name="venusYearFeedback">225 days is an year on Venus.</string>
    <string name="jupiterYearFeedback">4,333 days is an year on Jupiter.</string>
    <string name="mercuryYearFeedback">88 days is an year on Mercury.</string>

</resources>
