<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galacticcoders.whowantstobeamartiancolonist.QuestionEight">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_eight" />

    <CheckBox
        android:id="@+id/phobos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClick"
        android:text="@string/phobos" />

    <CheckBox
        android:id="@+id/deimos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClick"
        android:text="@string/deimos" />

    <CheckBox
        android:id="@+id/callisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClick"
        android:text="@string/callisto" />

    <CheckBox
        android:id="@+id/titan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClick"
        android:text="@string/titan" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextQuestion"
        android:text="@string/final_answer" />

</LinearLayout>
