<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootView"
    tools:context="com.galacticcoders.whowantstobeamartiancolonist.QuestionTwo">

    <ImageView style="@style/QuizBg" />

    <TextView
        android:id="@+id/question"
        style="@style/Question"
        android:text="@string/question_two" />

    <RadioGroup style="@style/AnswerSection">

        <RadioGroup
            android:id="@+id/rg_1"
            style="@style/AnswerGroup">

            <RadioButton
                android:id="@+id/mars"
                style="@style/AnswerLeft"
                android:text="@string/day_mars" />

            <RadioButton
                android:id="@+id/venus"
                style="@style/AnswerRight"
                android:text="@string/day_venus" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_2"
            style="@style/AnswerGroup">

            <RadioButton
                android:id="@+id/mercury"
                style="@style/AnswerLeft"
                android:text="@string/day_mercury" />

            <RadioButton
                android:id="@+id/jupiter"
                style="@style/AnswerRight"
                android:text="@string/day_jupiter" />

        </RadioGroup>

    </RadioGroup>

    <Button style="@style/NextQuestion" />

</RelativeLayout>