<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootView"
    tools:context="com.galacticcoders.whowantstobeamartiancolonist.QuestionTen">

    <ImageView style="@style/QuizBg" />

    <TextView
        android:id="@+id/question"
        style="@style/Question"
        android:text="@string/question_ten" />

    <RadioGroup style="@style/AnswerSection">

        <RadioGroup
            android:id="@+id/rg_1"
            style="@style/AnswerGroup">

            <RadioButton
                android:id="@+id/marsYear"
                style="@style/AnswerLeft"
                android:text="@string/year_mars" />

            <RadioButton
                android:id="@+id/venusYear"
                style="@style/AnswerRight"
                android:text="@string/year_venus" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_2"
            style="@style/AnswerGroup">

            <RadioButton
                android:id="@+id/jupiterYear"
                style="@style/AnswerLeft"
                android:text="@string/year_jupiter" />

            <RadioButton
                android:id="@+id/mercuryYear"
                style="@style/AnswerRight"
                android:text="@string/year_mercury" />

        </RadioGroup>

    </RadioGroup>

    <Button
        android:id="@+id/next_question"
        style="@style/NextQuestion" />

</RelativeLayout>