<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galacticcoders.whowantstobeamartiancolonist.QuestionThree">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/start_quizz_bg" />

    <TextView
        android:id="@+id/question"
        style="@style/Question"
        android:text="@string/question_three" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/argon"
                style="@style/AnswerLeft"
                android:layout_weight="1"
                android:text="@string/argon" />

            <CheckBox
                android:id="@+id/carbon_dioxide"
                style="@style/AnswerRight"
                android:layout_weight="1"
                android:text="@string/carbon_dioxide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/methane"
                style="@style/AnswerLeft"
                android:layout_weight="1"
                android:text="@string/methane" />

            <CheckBox
                android:id="@+id/ammonia"
                style="@style/AnswerRight"
                android:layout_weight="1"
                android:text="@string/ammonia" />

        </LinearLayout>

    </LinearLayout>

    <Button style="@style/NextQuestion" />

</RelativeLayout>
