<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galacticcoders.whowantstobeamartiancolonist.QuestionSeven">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/start_quizz_bg" />

    <TextView
        android:id="@+id/question"
        style="@style/Question"
        android:text="@string/question_seven" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/marsGod"
                style="@style/AnswerLeft"
                android:layout_weight="1"
                android:textSize="13sp"
                android:hint="@string/mars_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/venusGod"
                style="@style/AnswerRight"
                android:layout_weight="1"
                android:textSize="13sp"
                android:hint="@string/venus_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/jupiterGod"
                style="@style/AnswerLeft"
                android:layout_weight="1"
                android:textSize="13sp"
                android:hint="@string/jupiter_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/earthGod"
                style="@style/AnswerRight"
                android:layout_weight="1"
                android:textSize="13sp"
                android:hint="@string/neptune_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <Button style="@style/NextQuestion" />

</RelativeLayout>
